--- a/ground_truth/Snakefile
+++ b/ground_truth/Snakefile
@@ -79,14 +79,14 @@ rule unzip_SHAPE_MaP:
 	input:
 		expand("{path}/SHAPE-MaP.zip", path = gt_path)
 	output:
-		expand("{path}/{name}.1m7.map", path = gt_path, name = ["5S", "16S", "23S", "Group_I", "Group_II", "HCV_IRES", "TPP", "tRNAphe", "HIV-1"])
+		expand("{path}/{name}.1m7.map", path = gt_path, name = spike_ins)
 	shell:
 		"unzip -u {input} -d {gt_path} && touch {output}"
 
 rule process_SHAPE_MaP:
 	input:
 		expand("{path}/{{seqname}}.1m7.map", path = gt_path),
-		expand("{path}/structure_seq_PROBer.{suffix}", path = exp_path, suffix = ["beta", "gamma"])
+		expand("{path}/structure_seq_sorted_PROBer.{suffix}", path = exp_path, suffix = ["beta", "gamma"])
 	params:
 		output_name = "{path}/{{seqname}}".format(path = gt_path),
 		seed = "0"
