--- a/simulation/Snakefile
+++ b/simulation/Snakefile
@@ -52,9 +52,10 @@ rule generate_spike_in_ground_truth:
 		"{path}/ground_truth.{{suffix}}".format(path = sim_path),
 		expand("{path}/{name}.{{suffix}}", path = gt_path, name = spike_ins)
 	output:
-		"{path}/ground_truth_spikes.{{suffix}}".format(path = sim_path)
+		"{path}/ground_truth_spikes.{{suffix,(beta|gamma)}}".format(path = sim_path)
 	shell:
-		"{script_path}/insertBetaGamma {input[0]} {output} {input[1]} {input[2]} {input[3]}"
+		# "{script_path}/insertBetaGamma {input[0]} {output} {input[1]} {input[2]} {input[3]}"
+		"{script_path}/insertBetaGamma {input[0]} {output} {input[1]} {input[2]} {input[3]} {input[4]} {input[5]} {input[6]} {input[7]} {input[8]} {input[9]}"
 
 rule build_spike_in_simulation:
 	input: 
